# llm-tom

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  done-criteria.md  glossary.md  references.bib
analysis/: plan.md  prediction_matrix.csv
analysis/frequency_analysis/: README.md  lexical_control_pilot.py  residual_separation_pilot.py  separation-pilot-results.md  separation_pilot.py
implementation/: LICENSE  README.md  pyproject.toml
implementation/pilot/: README.md  calibration_pilot.py  m4-pilot-results.md  m4_pilot.py
implementation/src/llm_tom/: __init__.py  activations.py  circuit_id.py  config.py  convergence.py  encoding_gate.py  equivalence.py  geometric.py  lipschitz.py  ncme.py  patching.py  pipeline.py  probing.py  sd_pilot.py  stimuli.py  stimuli_content.py  topology.py
implementation/tests/: test_circuit_id.py  test_equivalence.py  test_geometric.py  test_lipschitz.py  test_ncme.py  test_pipeline_smoke.py  test_sd_pilot.py  test_stimuli.py  test_stimuli_content.py
paper/: outline.md  paper.md
prereg/: prereg.md
prereg/notes/: README.md  originator-claude-review.md  originator-gemini-review.md  originator-review-prompt.md  p3-claude-draft.md  p3-cross-bot-prompt.md  p3-gemini-draft.md  p3-gpt5-draft.md  p3-instance-claude.md  p3-instance-gemini.md  p3-revision-claude.md  p3-revision-gemini.md  p3-stress-test.md  p3-synthesis.md
stimuli/: README.md
stimuli/twenty-questions/: spec.md
